Thêm kiẻu dữ liệu dnạg ảnh trả về cho hàm  QRCode
